--- a/chats.html
+++ b/chats.html
@@ -35,6 +35,39 @@
         </div>
       </div>
     </header>
+    <main class="chats">
+      <div class="search-bar">
+        <i class="fas fa-search"></i>
+        <input type="text" placeholder="Find friends, chats, Plus Friends" />
+      </div>
+      <ul class="chats-list">
+        <li class="chats-chat">
+          <div class="chats-content">
+            <img src="images/avatar.jpg" />
+            <div class="chats-preview">
+              <h3 class="chats_user">LYNN</h3>
+              <span class="chats-last-message"
+                >Hello! This is a last message.</span
+              >
+            </div>
+          </div>
+          <span class="chats-date-time">15:55</span>
+        </li>
+        <li class="chats-chat">
+          <div class="chats-content">
+            <img src="images/avatar.jpg" />
+            <div class="chats-preview">
+              <h3 class="chats_user">KakaoTalk</h3>
+              <span class="chats-last-message"
+                >[KakaoTalk PC] You logged into KakaoTalk PC from the pc</span
+              >
+            </div>
+          </div>
+          <span class="chats-date-time">Jul 29</span>
+        </li>
+      </ul>
+      <div class="chats-btn"><i class="fas fa-comment"></i></div>
+    </main>
     <nav class="tap-bar">
       <a href="index.html" class="tap-bar-tab">
         <i class="fas fa-user"></i> <span class="tap-bar-title">Friends</span>
