--- a/find.html
+++ b/find.html
@@ -31,6 +31,32 @@
         <div class="header__column"></div>
       </div>
     </header>
+    <main class="find">
+      <section class="find-option">
+        <div class="find-option">
+          <i class="fas fa-address-book fa-lg"></i>
+          <span class="find-option-title">Find</span>
+        </div>
+        <div class="find-option">
+          <i class="fas fa-qrcode fa-lg"></i>
+          <span class="find-option-title">QR Code</span>
+        </div>
+        <div class="find-option">
+          <i class="fas fa-mobile-alt fa-lg"></i>
+          <span class="find-option-title">Shake</span>
+        </div>
+        <div class="find-option">
+          <i class="far fa-envelope fa-lg"></i>
+          <span class="find-option-title">Invite via SMS</span>
+        </div>
+      </section>
+      <section class="find-recommended">
+        <header><h6 class="recommended-title">Recommended Friends</h6></header>
+        <div class="recommended-none">
+          <span class="recommended-text">You have no recommended friends</span>
+        </div>
+      </section>
+    </main>
     <nav class="tap-bar">
       <a href="index.html" class="tap-bar-tab">
         <i class="fas fa-user"></i> <span class="tap-bar-title">Friends</span>
