--- a/more.html
+++ b/more.html
@@ -31,6 +31,100 @@
         <div class="header__column"><i class="fas fa-cog fa-lg"></i></div>
       </div>
     </header>
+    <main class="more">
+      <header class="more-header">
+        <div class="more-header-column">
+          <img src="images/avatar.jpg" />
+          <div class="more-header-info">
+            <h3 class="more-header-title">Nicolas</h3>
+            <span class="more-header-subtitle">itnicolasme@gmail.com</span>
+          </div>
+          <i class="far fa-comment-dots fa-2x"></i>
+        </div>
+      </header>
+      <section class="more-options">
+        <div class="more-option">
+          <i class="far fa-smile fa-2x"></i>
+          <span class="more-option-title">Emoticons</span>
+        </div>
+        <div class="more-option">
+          <i class="fas fa-paint-brush fa-2x"></i>
+          <span class="more-option-title">Themes</span>
+        </div>
+        <div class="more-option">
+          <i class="far fa-hand-peace fa-2x"></i>
+          <span class="more-option-title">Plus Friend</span>
+        </div>
+        <div class="more-option">
+          <i class="far fa-user-circle fa-2x"></i>
+          <span class="more-option-title">Account</span>
+        </div>
+      </section>
+      <section class="more-plus-friends">
+        <header class="plus-friends-header">
+          <h2 class="plus-friends-title">Plus Friends</h2>
+          <span class="plus-friends-learn-more"
+            ><i class="fas fa-info-circle"></i>Learn More</span
+          >
+        </header>
+        <div class="plus-friends-items">
+          <div class="plus-friends-item">
+            <i class="fas fa-utensils"></i
+            ><span class="plus-friends-item-title">Order</span>
+          </div>
+          <div class="plus-friends-item">
+            <i class="fas fa-home"></i
+            ><span class="plus-friends-item-title">Store</span>
+          </div>
+          <div class="plus-friends-item">
+            <i class="fas fa-tv"></i
+            ><span class="plus-friends-item-title">TV Channel/Radio</span>
+          </div>
+          <div class="plus-friends-item">
+            <i class="fas fa-pencil-alt"></i
+            ><span class="plus-friends-item-title">Creation</span>
+          </div>
+          <div class="plus-friends-item">
+            <i class="fas fa-graduation-cap"></i
+            ><span class="plus-friends-item-title">Education</span>
+          </div>
+          <div class="plus-friends-item">
+            <i class="fas fa-university"></i
+            ><span class="plus-friends-item-title">Politics/Society</span>
+          </div>
+          <div class="plus-friends-item">
+            <i class="fas fa-won-sign"></i
+            ><span class="plus-friends-item-title">Finance</span>
+          </div>
+          <div class="plus-friends-item">
+            <i class="fas fa-video"></i
+            ><span class="plus-friends-item-title">Movies/Music</span>
+          </div>
+        </div>
+      </section>
+      <section class="more-options">
+        <div class="more-option">
+          <img
+            src="images/kakao story.png"
+            alt=""
+            class="more-option-image"
+          /><span class="more-option-title">Kakao Story</span>
+        </div>
+        <div class="more-option">
+          <img src="images/path.png" alt="" class="more-option-image" /><span
+            class="more-option-title"
+            >Path</span
+          >
+        </div>
+        <div class="more-option">
+          <img
+            src="images/kakao friends.png"
+            alt=""
+            class="more-option-image"
+          /><span class="more-option-title">kakao friends</span>
+        </div>
+      </section>
+    </main>
     <nav class="tap-bar">
       <a href="index.html" class="tap-bar-tab">
         <i class="fas fa-user"></i> <span class="tap-bar-title">Friends</span>
