--- a/chat.html
+++ b/chat.html
@@ -37,5 +37,29 @@
         </div>
       </div>
     </header>
+    <main class="chat">
+      <div class="date-divider">
+        <span class="date-divider-text">Wednesday, August 2, 2017</span>
+      </div>
+      <div class="chat-message chat-message--from-me">
+        <span class="chat-message-time">17:55</span>
+        <span class="chat-message-body">Hello! This is a last message.</span>
+      </div>
+      <div class="chat-message chat-message--to-me">
+        <img src="images/avatar.jpg" class="chat-message-avatar" />
+        <div class="chat-message-center">
+          <h3 class="chat-message-username">LYNN</h3>
+          <span class="chat-message-body">And this is an answer</span>
+        </div>
+        <span class="chat-message-time">19:30</span>
+      </div>
+    </main>
+    <div class="type-message">
+      <i class="fas fa-plus fa-2x"></i>
+      <div class="type-message-input">
+        <input type="text" /> <i class="far fa-smile"></i>
+        <span class="record-message"> <i class="fas fa-microphone"></i> </span>
+      </div>
+    </div>
   </body>
 </html>
