--- a/chats.html
+++ b/chats.html
@@ -42,16 +42,18 @@
       </div>
       <ul class="chats-list">
         <li class="chats-chat">
-          <div class="chats-content">
-            <img src="images/avatar.jpg" />
-            <div class="chats-preview">
-              <h3 class="chats_user">LYNN</h3>
-              <span class="chats-last-message"
-                >Hello! This is a last message.</span
-              >
+          <a href="chat.html">
+            <div class="chats-content">
+              <img src="images/avatar.jpg" />
+              <div class="chats-preview">
+                <h3 class="chats_user">LYNN</h3>
+                <span class="chats-last-message"
+                  >Hello! This is a last message.</span
+                >
+              </div>
             </div>
-          </div>
-          <span class="chats-date-time">15:55</span>
+            <span class="chats-date-time">15:55</span>
+          </a>
         </li>
         <li class="chats-chat">
           <div class="chats-content">
