--- a/profile.html
+++ b/profile.html
@@ -26,10 +26,31 @@
         ></span>
       </div>
       <div class="header__bottom">
-        <div class="header__column"><i class="fas fa-times fa-lg"></i></div>
+        <div class="header__column">
+          <a href="index.html"><i class="fas fa-times fa-lg"></i></a>
+        </div>
         <div class="header__column"></div>
         <div class="header__column"><i class="fas fa-user fa-lg"></i></div>
       </div>
     </header>
+    <main class="profile">
+      <header class="profile-header">
+        <img src="images/avatar.jpg" alt="" />
+        <h3 class="profile-header-title">Nicolas</h3>
+      </header>
+      <input type="text" placeholder="itnicolasme@gmail.com" />
+      <div class="profile-actions">
+        <div class="profile-action">
+          <span class="profile-action-circle"
+            ><i class="fas fa-comment fa-2x"></i></span
+          ><span class="profile-action-title">My Chatroom</span>
+        </div>
+        <div class="profile-action">
+          <span class="profile-action-circle"
+            ><i class="fas fa-pencil-alt fa-2x"></i></span
+          ><span class="profile-action-title">Edit Profile</span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
