--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
       crossorigin="anonymous"
     />
     <title>Friends</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <div class="header__top"></div>
-      <div class="header__column">
-        <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
-      </div>
-      <div class="header__column"><span class="header__time">18:38</span></div>
-      <div class="header__column">
-        <i class="fas fa-moon"></i> <i class="fab fa-bluetooth"></i>
-        <span class="header__battery"
-          >66% <i class="fas fa-battery-three-quarters"></i
-        ></span>
+    <header class="top-header">
+      <div class="header__top">
+        <div class="header__column">
+          <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
+        </div>
+        <div class="header__column">
+          <span class="header__time">18:38</span>
+        </div>
+        <div class="header__column">
+          <i class="fas fa-moon"></i> <i class="fab fa-bluetooth"></i>
+          <span class="header__battery"
+            >66% <i class="fas fa-battery-three-quarters"></i
+          ></span>
+        </div>
       </div>
       <div class="header__bottom">
         <div class="header__column">
@@ -66,7 +70,7 @@
         <div class="friends-section-rows">
           <div class="friends-section-row">
             <div class="friends-section-column">
-              <img src="" alt="" />
+              <img src="images/kakao story.png" alt="" />
               <span class="friends-section-name">LYNN</span>
             </div>
             <span class="friends-section-tagline"
