--- a/chat.html
+++ b/chat.html
@@ -11,29 +11,31 @@
       crossorigin="anonymous"
     />
     <title>Chat</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <div class="header__top"></div>
-      <div class="header__column">
-        <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
-      </div>
-      <div class="header__column"><span class="header__time">18:38</span></div>
-      <div class="header__column">
-        <i class="fas fa-moon"></i> <i class="fab fa-bluetooth"></i>
-        <span class="header__battery"
-          >66%<i class="fas fa-battery-three-quarters"></i
-        ></span>
+    <header class="top-header">
+      <div class="header__top">
+        <div class="header__column">
+          <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
+        </div>
+        <div class="header__column">
+          <span class="header__time">18:38</span>
+        </div>
+        <div class="header__column">
+          <i class="fas fa-moon"></i> <i class="fab fa-bluetooth"></i>
+          <span class="header__battery"
+            >66% <i class="fas fa-battery-three-quarters"></i
+          ></span>
+        </div>
       </div>
       <div class="header__bottom">
         <div class="header__column">
           <a href="chats.html"> <i class="fas fa-chevron-left fa-lg"></i></a>
         </div>
+        <div class="header__column"><span class="header__text">LYNN</span></div>
         <div class="header__column">
-          <span class="header__text">LYNN</span>
-          <div class="header__column">
-            <i class="fas fa-search"></i> <i class="fas fa-bars"></i>
-          </div>
+          <i class="fas fa-search"></i> <i class="fas fa-bars"></i>
         </div>
       </div>
     </header>
