chats,friends css

--- a/chats.html
+++ b/chats.html
@@ -60,16 +60,18 @@
           </a>
         </li>
         <li class="chats-chat">
-          <div class="chats-content">
-            <img src="images/avatar.jpg" />
-            <div class="chats-preview">
-              <h3 class="chats_user">KakaoTalk</h3>
-              <span class="chats-last-message"
-                >[KakaoTalk PC] You logged into KakaoTalk PC from the pc</span
-              >
+          <a href="chat.html">
+            <div class="chats-content">
+              <img src="images/avatar.jpg" />
+              <div class="chats-preview">
+                <h3 class="chats_user">KakaoTalk</h3>
+                <span class="chats-last-message"
+                  >[KakaoTalk PC] You logged into KakaoTalk PC from the pc</span
+                >
+              </div>
             </div>
-          </div>
-          <span class="chats-date-time">Jul 29</span>
+            <span class="chats-date-time">Jul 29</span>
+          </a>
         </li>
       </ul>
       <div class="chats-btn"><i class="fas fa-comment"></i></div>
