--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
         </header>
         <div class="friends-section-rows">
           <div class="friends-section-row">
-            <a href="profile.html">
-              <img src="images/avatar.jpg" alt="" />
-              <span class="friends-section-name">Nicolas</span>
-            </a>
+            <img src="images/avatar.jpg" alt="" />
+            <a href="profile.html" class="friends-section-name">Nicolas </a>
           </div>
           <div class="friends-section-row">
             <img src="images/path.png" alt="" />
@@ -68,7 +66,7 @@
           <h6 class="friends-section-title">Friends</h6>
         </header>
         <div class="friends-section-rows">
-          <div class="friends-section-row">
+          <div class="friends-section-row with-tagline">
             <div class="friends-section-column">
               <img src="images/kakao story.png" alt="" />
               <span class="friends-section-name">LYNN</span>
