--- a/find.html
+++ b/find.html
@@ -36,7 +36,7 @@
       </div>
     </header>
     <main class="find">
-      <section class="find-option">
+      <section class="find-options">
         <div class="find-option">
           <i class="fas fa-address-book fa-lg"></i>
           <span class="find-option-title">Find</span>
