--- a/more.html
+++ b/more.html
@@ -43,8 +43,8 @@
             <h3 class="more-header-title">Nicolas</h3>
             <span class="more-header-subtitle">itnicolasme@gmail.com</span>
           </div>
-          <i class="far fa-comment-dots fa-2x"></i>
         </div>
+        <i class="far fa-comment-dots fa-2x"></i>
       </header>
       <section class="more-options">
         <div class="more-option">
@@ -68,64 +68,56 @@
         <header class="plus-friends-header">
           <h2 class="plus-friends-title">Plus Friends</h2>
           <span class="plus-friends-learn-more"
-            ><i class="fas fa-info-circle"></i>Learn More</span
+            ><i class="fas fa-info-circle"></i> Learn More</span
           >
         </header>
         <div class="plus-friends-items">
           <div class="plus-friends-item">
-            <i class="fas fa-utensils"></i
-            ><span class="plus-friends-item-title">Order</span>
+            <i class="fas fa-utensils"></i>
+            <span class="plus-friends-item-title">Order</span>
           </div>
           <div class="plus-friends-item">
-            <i class="fas fa-home"></i
-            ><span class="plus-friends-item-title">Store</span>
+            <i class="fas fa-home"></i>
+            <span class="plus-friends-item-title">Store</span>
           </div>
           <div class="plus-friends-item">
-            <i class="fas fa-tv"></i
-            ><span class="plus-friends-item-title">TV Channel/Radio</span>
+            <i class="fas fa-tv"></i>
+            <span class="plus-friends-item-title">TV Channel/Radio</span>
           </div>
           <div class="plus-friends-item">
-            <i class="fas fa-pencil-alt"></i
-            ><span class="plus-friends-item-title">Creation</span>
+            <i class="fas fa-pencil-alt"></i>
+            <span class="plus-friends-item-title">Creation</span>
           </div>
           <div class="plus-friends-item">
-            <i class="fas fa-graduation-cap"></i
-            ><span class="plus-friends-item-title">Education</span>
+            <i class="fas fa-graduation-cap"></i>
+            <span class="plus-friends-item-title">Education</span>
           </div>
           <div class="plus-friends-item">
-            <i class="fas fa-university"></i
-            ><span class="plus-friends-item-title">Politics/Society</span>
+            <i class="fas fa-university"></i>
+            <span class="plus-friends-item-title">Politics/Society</span>
           </div>
           <div class="plus-friends-item">
-            <i class="fas fa-won-sign"></i
-            ><span class="plus-friends-item-title">Finance</span>
+            <i class="fas fa-won-sign"></i>
+            <span class="plus-friends-item-title">Finance</span>
           </div>
           <div class="plus-friends-item">
-            <i class="fas fa-video"></i
-            ><span class="plus-friends-item-title">Movies/Music</span>
+            <i class="fas fa-video"></i>
+            <span class="plus-friends-item-title">Movies/Music</span>
           </div>
         </div>
       </section>
-      <section class="more-options">
-        <div class="more-option">
-          <img
-            src="images/kakao story.png"
-            alt=""
-            class="more-option-image"
-          /><span class="more-option-title">Kakao Story</span>
+      <section class="more-links">
+        <div class="more-link">
+          <img src="images/kakao story.png" alt="" class="more-option-image" />
+          <span class="more-link-title">Kakao Story</span>
         </div>
-        <div class="more-option">
-          <img src="images/path.png" alt="" class="more-option-image" /><span
-            class="more-option-title"
-            >Path</span
-          >
+        <div class="more-link">
+          <img src="images/path.png" alt="" class="more-link-image" />
+          <span class="more-link-title">Path</span>
         </div>
-        <div class="more-option">
-          <img
-            src="images/kakao friends.png"
-            alt=""
-            class="more-option-image"
-          /><span class="more-option-title">kakao friends</span>
+        <div class="more-link">
+          <img src="images/kakao friends.png" alt="" class="more-link-image" />
+          <span class="more-link-title">kakao friends</span>
         </div>
       </section>
     </main>
