--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="top-header">
+    <header class="top-header top-header-transparent">
       <div class="header__top">
         <div class="header__column">
           <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
@@ -25,8 +25,8 @@
         <div class="header__column">
           <i class="fas fa-moon"></i> <i class="fab fa-bluetooth"></i>
           <span class="header__battery"
-            >66% <i class="fas fa-battery-three-quarters"></i
-          ></span>
+            >66% <i class="fas fa-battery-three-quarters"></i>
+          </span>
         </div>
       </div>
       <div class="header__bottom">
