--- a/chat.html
+++ b/chat.html
@@ -13,8 +13,8 @@
     <title>Chat</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <header class="top-header">
+  <body class="body-chat">
+    <header class="top-header chat-header">
       <div class="header__top">
         <div class="header__column">
           <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
@@ -57,11 +57,16 @@
       </div>
     </main>
     <div class="type-message">
-      <i class="fas fa-plus fa-2x"></i>
+      <i class="fas fa-plus fa-lg"></i>
       <div class="type-message-input">
-        <input type="text" /> <i class="far fa-smile"></i>
-        <span class="record-message"> <i class="fas fa-microphone"></i> </span>
+        <input type="text" /> <i class="far fa-smile fa-lg"></i>
+        <span class="record-message">
+          <i class="fas fa-microphone fa-lg"></i>
+        </span>
       </div>
+    </div>
+    <div class="bigscreentext">
+      <span>please make your screen smaller</span>
     </div>
   </body>
 </html>
