--- a/chats.html
+++ b/chats.html
@@ -91,5 +91,8 @@
         <span class="tap-bar-title">More</span>
       </a>
     </nav>
+    <div class="bigscreentext">
+      <span>please make your screen smaller</span>
+    </div>
   </body>
 </html>
