--- a/index.html
+++ b/index.html
@@ -93,5 +93,8 @@
         <span class="tap-bar-title">More</span>
       </a>
     </nav>
+    <div class="bigscreentext">
+      <span>please make your screen smaller</span>
+    </div>
   </body>
 </html>
