--- a/more.html
+++ b/more.html
@@ -136,5 +136,8 @@
         <span class="tap-bar-title">More</span>
       </a>
     </nav>
+    <div class="bigscreentext">
+      <span>please make your screen smaller</span>
+    </div>
   </body>
 </html>
