--- a/profile.html
+++ b/profile.html
@@ -39,22 +39,31 @@
     </header>
     <main class="profile">
       <header class="profile-header">
-        <img src="images/avatar.jpg" alt="" />
-        <h3 class="profile-header-title">Nicolas</h3>
-      </header>
-      <input type="text" placeholder="itnicolasme@gmail.com" />
-      <div class="profile-actions">
-        <div class="profile-action">
-          <span class="profile-action-circle"
-            ><i class="fas fa-comment fa-2x"></i></span
-          ><span class="profile-action-title">My Chatroom</span>
+        <div class="profile-header-container">
+          <img src="images/avatar.jpg" alt="" />
+          <h3 class="profile-header-title">Nicolas</h3>
         </div>
-        <div class="profile-action">
-          <span class="profile-action-circle"
-            ><i class="fas fa-pencil-alt fa-2x"></i></span
-          ><span class="profile-action-title">Edit Profile</span>
+      </header>
+      <div class="profile-container">
+        <input type="text" placeholder="itnicolasme@gmail.com" />
+        <div class="profile-actions">
+          <div class="profile-action">
+            <span class="profile-action-circle">
+              <i class="fas fa-comment fa-lg"></i>
+            </span>
+            <span class="profile-action-title">My Chatroom</span>
+          </div>
+          <div class="profile-action">
+            <span class="profile-action-circle">
+              <i class="fas fa-pencil-alt fa-lg"></i>
+            </span>
+            <span class="profile-action-title">Edit Profile</span>
+          </div>
         </div>
       </div>
     </main>
+    <div class="bigscreentext">
+      <span>please make your screen smaller</span>
+    </div>
   </body>
 </html>
