--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header__column">
           <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
         </div>
-        <div class="header__column">
+        <div class="header__column header__clock">
           <span class="header__time">18:38</span>
         </div>
         <div class="header__column">
@@ -96,5 +96,6 @@
     <div class="bigscreentext">
       <span>please make your screen smaller</span>
     </div>
+    <script src="js/clock.js"></script>
   </body>
 </html>
